# LiteFigure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
figures/: dragon_auto_plot.blk  dragon_template_plot.blk  f02.blk  f04.blk  f07.blk  f08.blk  f1.blk  f10.blk  f11.blk  f12.blk  f13.blk  f14.blk  f15.blk  f16.blk  f17.blk  f18.blk  f19.blk  f20.blk  f21.blk  f22.blk  f23.blk  f24.blk  f25.blk  f26.blk  f27.blk  f28.blk  f29.blk  f3.blk  f30.blk  f31.blk  f32.blk  f33.blk  f34.blk  f35.blk  f36.blk  f37.blk  f38.blk  f39.blk  f40.blk  f41.blk  (+3 more)
figures/unsupported/: f10.blk
fonts/: Courier  Courier-Bold
images/: hmap.exr  render.csv
src/1st-party/blk/: blk.cpp  blk.h
src/1st-party/csv/: csv.cpp  csv.h
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  figure.cpp  figure.h  figure_plot.cpp  figure_text.cpp  font.cpp  font.h  pdf_writer.cpp  primitives.cpp  primitives_render.cpp  renderer.h  renderer_primitive.cpp  renderer_text.cpp  templates.cpp  templates.h  ttf_reader.cpp  ttf_reader.h
src/tests/: CMakeLists.txt  main.cpp  regression.cpp  regression.h
templates/: blk_test.blk  common.blk  plots.blk
